# ksdj_app

./: Makefile  Makefile.am  Makefile.in  build.sh  build.sh.bak  build_vd.sh  build_vd.sh.bak  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
console/: Makefile  Makefile.am  Makefile.in  commands.c  keypads.c  keypads.h  linphonec  linphonec.c  linphonec.c.bak  linphonec.h  linphonec_z.c  linphonecsh  shell.c  vkeypads.c
console/.libs/: linphonec  linphonecsh
coreapi/: Makefile  Makefile.am  Makefile.in  address.c  authentication.c  callbacks.c  chat.c  define.h  linphonecall.c  linphonecore.c  lpconfig.c  offeranswer.c  private.h  sal_eXosip2.c  sal_eXosip2_presence.c  sipsetup.c  test_lsd  test_numbers
coreapi/.libs/: liblinphone.lai  test_lsd  test_numbers
coreapi/help/: Doxyfile  Makefile  Makefile.in
m4/: Makefile  Makefile.in
mediastreamer2/: Makefile  Makefile.am  Makefile.in  acinclude.m4  config.status  configure  configure.ac  libtool  mediastreamer-config.h  mediastreamer-config.h.in  mediastreamer-config.h.in~  mediastreamer.pc
mediastreamer2/autom4te.cache/: output.0  requests  traces.0  traces.1
mediastreamer2/help/: Doxyfile  Makefile  Makefile.in
mediastreamer2/include/: Makefile  Makefile.in
mediastreamer2/include/mediastreamer2/: Makefile  Makefile.am  Makefile.in  allfilters.h  define.h  mediastream.h  mssndcard.h  msv4l.h  msvideo.h
mediastreamer2/m4/: Makefile  Makefile.in
mediastreamer2/po/: Makefile  Makefile.in
mediastreamer2/src/: Makefile  Makefile.am  Makefile.in  voipdescs.h  voipdescs.txt
mediastreamer2/src/.libs/: libmediastreamer_base.lai  libmediastreamer_voip.lai
mediastreamer2/src/audiofilters/: alsa.c  alsa_adc.c  alsa_fm34.c  msvolume.c  oss.c
mediastreamer2/src/base/: mscommon.c  mssndcard.c  msticker.c
mediastreamer2/src/h264dec/: favc_avcodec.h  fbvideo.c  fbvideo.h  h264.h  h264dec.c  port.h  videoout.c  vpe.h
mediastreamer2/src/h264enc/: favc_avcodec.h  h264.h  h264e.c  h264enc.c  port.h  ratecontrol.h
mediastreamer2/src/h264enc/.backup/: new-h264enc.c  old-h264enc.c
mediastreamer2/src/ortp-deps/: port.c
mediastreamer2/src/otherfilters/: msrtp.c  tee.c
mediastreamer2/src/videofilters/: msv4l.c  msv4l_videodoor_s.c  videoenc.c
mediastreamer2/src/voip/: audioconference.c  audiostream.c  msvoip.c  rfc3984.c  ringstream.c  videostream.c
mediastreamer2/tester/: Makefile  Makefile.am  Makefile.in
mediastreamer2/tools/: Makefile  Makefile.in  mediastream.c
oRTP/: Makefile  Makefile.bak  config.status  libtool  ortp-config.h  ortp.defs  ortp.pc
oRTP/autom4te.cache/: output.0  requests  traces.0  traces.1
oRTP/include/: Makefile
oRTP/include/ortp/: Makefile
oRTP/m4/: Makefile
oRTP/src/: Makefile  port.c
oRTP/src/.libs/: libortp.lai
oRTP/src/tests/: Makefile
oRTP/src/tests/win_receiver/: Makefile
oRTP/src/tests/win_sender/: Makefile
po/: Makefile  Makefile.in  POTFILES
scripts/: Makefile  Makefile.in
share/: Makefile  Makefile.am  Makefile.in  Makefile.inc  linphone.desktop  linphone.pc
share/C/: Makefile  Makefile.in
tools/: Makefile  Makefile.in
